    their past contributions.
  * Avoid locale errors from perl from post-base-installer script.

  [ Jérémy Bobbio ]
  * Fix mispositioned arguments in the PLAIN rule in loadkeys.
  * Add support for parsing "CapsShift" in keymaps.  (Closes: #490611)
  * Update symbol tables to the one found in kbd 1.14.1.
  * Merge unicode handling from kbd 1.14.1.

 -- Frans Pop <fjp@debian.org>  Thu, 29 May 2008 08:47:11 +0200

kbd-chooser (1.43) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Latvian (lv.po) by Viesturs Zarins
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 08:18:38 -0200

kbd-chooser (1.42) unstable; urgency=low

  [ Updated translations ]
  * Kurdish (ku.po) by Erdal Ronahi
  * Amharic (am.po) by tegegne tefera

 -- Christian Perrier <bubulle@debian.org>  Thu, 10 Jan 2008 07:25:45 +0100

kbd-chooser (1.41) unstable; urgency=low

  * Fix keymap/policy question preseeding quoting and set question type.
    Because of this syntax error console-data wasn't being installed in
    /target.

 -- Otavio Salvador <otavio@debian.org>  Fri, 28 Dec 2007 18:33:30 -0200

kbd-chooser (1.40) unstable; urgency=low

  * Implement better solution as discussed on the debian-boot list to avoid
    console-data displaying its keymap/policy question by setting its "seen"
    flag. Reverts the change in 1.39.

  [ Updated translations ]
  * Korean (ko.po) by Changwoo Ryu

 -- Frans Pop <fjp@debian.org>  Wed, 19 Dec 2007 09:40:40 +0100

kbd-chooser (1.39) unstable; urgency=low

  * After recent changes in apt-install, we need to tell console-data not to
    display its keymap/policy question when it is being installed during a D-I
    installation. console-data (>= 2:1.04-2) will check for the existence of
    the file /tmp/debian-installer/keymap-policy-default to suppress the